ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2422,7 +2422,7 @@ img {
 	}
 	.container > .navbar-collapse {
 		float: right;
-		width: 50% !important;
+		width: 70% !important;
 	}
 	.navbar-nav {
 		float: right;
